# pane-view

./: .gitignore  README.md
.github/workflows/: rust.yml
src/: index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
